suite dto get all logement depuis service logement