@@ -1,6 +1,7 @@
 package fr.orleans.univ.miage.m2.rbnbreservationservice.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import fr.orleans.univ.miage.m2.rbnbreservationservice.dto.Logement;
 import fr.orleans.univ.miage.m2.rbnbreservationservice.dto.LogementDTO;
 import fr.orleans.univ.miage.m2.rbnbreservationservice.dto.ReservationDTO;
 import fr.orleans.univ.miage.m2.rbnbreservationservice.entity.Disponibilite;
@@ -37,30 +38,29 @@ public class ReservationServiceImpl implements ReservationService {
     //TODO : methode pour set la dispo
 
     @Override
-    public HashMap<LogementDTO, Collection<Reservation>> getReservationsByHote(Long idHote) throws ReservationIntrouvableException { //TODO : Ptdrrrrr jamais de la vie ça fonctionne + manque modifier dto
+    public HashMap<Logement, Collection<Reservation>> getReservationsByHote(Long idHote) throws ReservationIntrouvableException { //TODO : Ptdrrrrr jamais de la vie ça fonctionne + manque modifier dto
         String urlLogements = "http://rbnb-logement-service/logement/"+ idHote;
         //Collection<LogementDTO> logements  = restTemplate.getForObject(urlLogements, LogementDTO.class);
         //LogementDTO[] logements = restTemplate.getForObject(urlLogements, LogementDTO[].class);
 
-        ResponseEntity<LogementDTO[]> responseEntity =
-                restTemplate.getForEntity(urlLogements, LogementDTO[].class);
+        ResponseEntity<Logement[]> responseEntity =
+                restTemplate.getForEntity(urlLogements, Logement[].class);
 
-        LogementDTO[] logements = responseEntity.getBody();
+        Logement[] logements = responseEntity.getBody();
 
         ObjectMapper mapper = new ObjectMapper();
 
         assert logements != null;
-        Collection<LogementDTO> logementDTOS = Arrays.stream(logements)
-                .map(logementDTO -> mapper.convertValue(logementDTO, LogementDTO.class))
-                .collect(Collectors.toList());
+        List<Logement> logementDTOS = Arrays.stream(logements)
+                .map(logementDTO -> mapper.convertValue(logementDTO, Logement.class)).toList();
 
 
         Collection<Reservation> reservationsLogement = new ArrayList<>();
-        HashMap<LogementDTO, Collection<Reservation>> reservations = new HashMap<>();
+        HashMap<Logement, Collection<Reservation>> reservations = new HashMap<>();
 
-        for (LogementDTO logementDTO : logementDTOS
+        for (Logement logementDTO : logementDTOS
              ) {
-            reservationsLogement =  reservationRepo.findAllReservationsByIdLogement(logementDTO.getIdLogement());
+            reservationsLogement =  reservationRepo.findAllReservationsByIdLogement(logementDTO.getId());
             reservations.put(logementDTO,reservationsLogement);
             //reservations.addAll(reservationsLogement);
         }
